# basyx-python-sdk

./: .gitignore  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
basyx/aas/: __init__.py  version.py
basyx/aas/adapter/: aasx.py  http.py
basyx/aas/adapter/json/: __init__.py  json_deserialization.py  json_serialization.py
basyx/aas/adapter/xml/: __init__.py  xml_deserialization.py  xml_serialization.py
basyx/aas/backend/: backends.py  couchdb.py  http.py  local_file.py  mqtt.py  opcua.py
basyx/aas/compliance_tool/: cli.py  compliance_check_json.py  compliance_check_xml.py
basyx/aas/examples/: AID_AIMC_Example.xml  new_tutorial_backend_couchdb.py  tutorial_backend_couchdb.py  tutorial_backends.py  tutorial_create_simple_aas.py  tutorial_data_integration.py  tutorial_serialization_deserialization.py
basyx/aas/examples/data/: __init__.py  (+7 more)
basyx/aas/model/: ConceptDescription.md  __init__.md  __init__.py  _string_constraints.md  aas.md  aas.py  base.md  base.py  concept.py  constants.py  datatypes.md  datatypes.py  external_source.py  protocols.py  provider.md  provider.py  source.py  submodel.md  submodel.py  types.py  verification.py
basyx/aas/util/: __init__.py  identification.py
compliance_tool/: pyproject.toml
docs/source/: conf.py
etc/scripts/: aas-core-to-basyx.py  aas_test_engines_filter.txt  requirements.txt
etc/scripts/aas_core_to_basyx/: ast_building_blocks.py  basic.py  main.py  patching.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
sdk/: .readthedocs.yaml  pyproject.toml
sdk/test/model/: test_base.py
server/: README.md
server/app/: main.py  pyproject.toml
server/app/interfaces/: base.py  repository.py
test/: test_config.ini
test/adapter/json/: test_json_deserialization.py  test_json_serialization.py  test_json_serialization_deserialization.py
test/adapter/xml/: test_xml_deserialization.py  test_xml_serialization.py  test_xml_serialization_deserialization.py
test/backend/: test_couchdb.py  test_local_file.py
test/compliance_tool/: test_aas_compliance_tool.py
test/examples/: test_backend_opcua.py  test_examples.py  test_tutorials.py
test/model/: test_base.py  test_provider.py  test_string_constraints.py
(+9 files in other folders)
