[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']

[tool.isort]
profile = "black"

[tool.poetry]
name = "basyx-python-sdk"
version = "0.1.0"
description = "Python SDK for BaSyx"
authors = ["IAT <IAT>"]
dependencies = [
    "lxml",
    "python-dateutil",
    "pyecma376-2",
    "urllib3"
]
dev-dependencies = [
    "pytest"
]

