[build-system]
requires = ["setuptools", "wheel", "setuptools-scm", "poetry-core", "setuptools-build-meta", "setuptools-git"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "basyx-python-sdk"
version = "0.1.0"
description = "Python SDK for BaSyx"
authors = ["IAT <IAT@RWTH>"]
dependencies = [
    "lxml",
    "python-dateutil",
    "pyecma376-2",
    "urllib3"
]
dev-dependencies = [
    "pytest"
]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']

[tool.isort]
profile = "black"
