[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "basyx-python-sdk"
version = "0.1.0"
description = "The Eclipse BaSyx Python SDK, an implementation of the Asset Administration Shell for Industry 4.0 systems"
authors = ["The Eclipse BaSyx Authors IAT, RWTH Aachen University"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/eclipse-basyx/basyx-python-sdk"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
packages = [
    { include = "basyx" }
]
exclude = ["tests", "tests.*"]
include = ["basyx/py.typed", "basyx.aas.examples.data/TestFile.pdf"]

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "~4.7"
lxml = ">=4.2,<5"
python-dateutil = ">=2.8,<3.0"
pyecma376-2 = ">=0.2.4"
urllib3 = ">=1.26,<2.0"
lxml-stubs = "~0.5.1"

[tool.poetry.dev-dependencies]
types-python-dateutil = "*"
#dateutil-stubs = "*"
coverage = "^5.5"
mypy = "^0.910"

[tool.poetry.scripts]
aas-compliance-check = "basyx.aas.compliance_tool.cli:main"
